crates/toml_edit/tests/snapshots/invalid/array/no-comma-03.stderr
TOML parse error at line 1, column 22
  |
1 | no-comma-3 = [ 1 #,]
  |                      ^
unclosed array, expected `]`
